[package]
name = "casuarius"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
description = """
A Rust implementation of the Cassowary linear constraint solving algorithm.

This is a fork of `cassowary-rs` originally written by Dylan Ede. It makes a number of improvements
including:

* `Solver`s are Send + Sync
* new variable types can be defined, removing the need to maintain a lookup map

The Cassowary algorithm is designed for naturally laying out user interfaces using linear constraints,
like 'this button must line up with this text box'.
"""
homepage = "https://github.com/schell/casuarius"
repository = "https://github.com/schell/casuarius"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["constraint", "simplex", "user", "interface", "layout"]

[dependencies]
ordered-float = "1.0"