[package]
name = "casuarius"
version = "0.1.1"
edition = "2021"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
description = """
Another implementation of the Cassowary linear constraint solving algorithm.
"""
homepage = "https://github.com/schell/casuarius"
repository = "https://github.com/schell/casuarius"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["constraint", "simplex", "user", "interface", "layout"]

[dependencies]
ordered-float = "^1.0"
rustc-hash = "^1.1"
